--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Accessibility Widget Demo</h1>
     <p>This is a demo page for the accessibility widget.</p>
-    
+
+        <h1>וויג'ט הנגישות</h1>
+    <p>זוהי בדיקת הוויג'ט הנגישות</p>
     <!-- Подключение виджета -->
     <script src="widget.js"></script>
 </body>
